branches/wip/Archive/384985e233e98a4f50ee0a540ba9c483-a63ad9fea3739cb794a74965e5d28fb3/output
+ g++ -std=c++1y -O2 -Wall -pthread main.cpp
main.cpp: In instantiation of ‘bar<T>::bar(T&&) [with T = X&]’:
main.cpp:15:34:   required from ‘auto foo(T&&) [with T = X&]’
main.cpp:21:10:   required from here
main.cpp:8:38: error: invalid initialization of non-const reference of type ‘X&’ from an rvalue of type ‘<brace-enclosed initializer list>’
     bar(T&& t) : t{std::forward<T>(t)} { }
                                      ^
